package com.spe.model;

// Enum simples so para padronizar os tipos de alerta.
public enum TipoAlerta { VENCIMENTO_PROXIMO, VENCIDO, ESTOQUE_BAIXO }
