package com.spe.model;

// Esse enum junta todos os tipos de movimentacao aceitos pelo sistema.
public enum TipoMovimentacao { ENTRADA, SAIDA, AJUSTE, DESCARTE }
