package com.spe.repository;

import java.util.List;
import java.util.Optional;

public interface Repository<T> {
    T salvar(T entidade);
    Optional<T> buscar(String id);
    List<T> listar();
}
