@startuml
skinparam classAttributeIconSize 0

enum TipoMovimentacao { ENTRADA SAIDA AJUSTE DESCARTE }
enum PapelUsuario { OPERADOR GERENTE }
enum TipoAlerta { VENCIMENTO_PROXIMO VENCIDO ESTOQUE_BAIXO }

class Produto {
  -String id
  -String nome
  -String lote
  -LocalDate validade
  -int quantidade
  -int estoqueMinimo
}

class Movimentacao {
  -String id
  -String produtoId
  -TipoMovimentacao tipo
  -int quantidade
  -String usuarioId
  -LocalDateTime data
  -String observacao
}

class Usuario {
  -String id
  -String login
  -String senhaHash
  -PapelUsuario papel
}

class Alerta {
  -TipoAlerta tipo
  -String mensagem
  -LocalDateTime data
}

interface "Repository<T>" as Repo {
  +salvar(T): T
  +buscar(String): Optional<T>
  +listar(): List<T>
}

interface AlertaObserver { +notificar(Alerta) }
interface ValidacaoMovimentacaoStrategy { +validar(Produto, Movimentacao) }

class AlertaService <<Singleton>> {
  +getInstance()
  +registrar(AlertaObserver)
  +disparar(Alerta)
}

class MovimentacaoFactory <<Factory>> {
  +criar(produtoId, tipo, qtd, usuarioId, obs)
}

class EstoqueService {
  -ProdutoRepository produtos
  -AuditoriaService auditoria
  -Map<TipoMovimentacao, ValidacaoMovimentacaoStrategy> estrategias
  +registrarMovimentacao(Movimentacao)
  +verificarAlertas()
}

class AuditoriaService {
  +registrar(Movimentacao)
  +historicoPorProduto(String)
}

class UsuarioService {
  +cadastrar(login, senha, papel)
  +autenticar(login, senha)
}

EstoqueService --> "ProdutoRepository" Repo
EstoqueService --> AuditoriaService
EstoqueService ..> ValidacaoMovimentacaoStrategy
EstoqueService ..> AlertaService
AlertaService o--> AlertaObserver
AuditoriaService --> "MovimentacaoRepository" Repo
UsuarioService --> "UsuarioRepository" Repo
MovimentacaoFactory ..> Movimentacao
@enduml
